Fix bug #8293 truncated logo on \mobile

--- a/media/css/firefox/mobile/mobile.scss
+++ b/media/css/firefox/mobile/mobile.scss
@@ -163,6 +163,7 @@ main .mzp-l-content {
     @include image-replaced;
     background-position: top center;
     background-repeat: no-repeat;
+    background-size: contain;
     content: '';
     display: block;
 
